<resources>
    <string name="app_name">DataBinding</string>
    <string name="firstname">FirstName :</string>
    <string name="lastname">LastName :</string>
    <string name="age">Age :</string>
    <string name="last_name">Last Name :</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="button">Button</string>
    <string name="getbutton">getButton</string>
    <string name="name">Name</string>
</resources>