<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".RegistrationActivity">

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="10dp"
            android:text="Username"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/email"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textUsername"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textUsername"
            app:layout_constraintTop_toBottomOf="@+id/textUsername"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:padding="10dp"
            android:text="@string/phone_number"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogout"
            app:layout_constraintEnd_toEndOf="@+id/textEmail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textEmail"
            app:layout_constraintTop_toBottomOf="@+id/textEmail"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textPhoneNumber"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintStart_toStartOf="@+id/textPhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/textEmail"
            app:layout_constraintVertical_bias="0.001" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>